Bug 383030 - Negative values for -moz-border-radius/-moz-outline-radius should be ignored, r+sr=dbaron